<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_weight="1">
        <!--  android:weightSum="1" 쓰면 각각 weight=0.25 적용 -->

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@color/red"
            android:layout_weight="1"
            android:text="@string/B1"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@color/green"
            android:layout_weight="1"
            android:text="@string/B2"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@color/blue"
            android:layout_weight="1"
            android:text="@string/B3"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@color/yellow"
            android:layout_weight="1"
            android:text="@string/B4"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="1">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:gravity="center_vertical"
            android:layout_weight="1"
            android:text="@string/T1" />
        <!-- android:textAlignment="center"로 우선 가운데 정렬한뒤
         android:gravity="center_vertical"를 사용해 가운데로 위치시킴-->

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="1"
            android:text="@string/T2"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="1"
            android:text="@string/T3"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="1"
            android:text="@string/T4"/>

    </LinearLayout>

</LinearLayout>